Affected Issue: PMO-
What this commit has achieved:
1. Changed datasource config in profile `dev`

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -37,9 +37,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/identityManager
-    username: identityManager
-    password:
+    url: jdbc:postgresql://localhost:5432/identity-manager
+    username: postgres
+    password: postgres
     hikari:
       poolName: Hikari
       auto-commit: false
