--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ spring_boot_version=2.2.7.RELEASE
 # The hibernate version should match the one managed by
 # https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
 hibernate_version=5.4.15.Final
+lombok_version=1.18.16
 mapstruct_version=1.3.1.Final
 archunit_junit5_version=0.14.1
 caffeine_version=2.8.4
